[gd_scene load_steps=4 format=3 uid="uid://d1m8t57voowjq"]

[ext_resource type="Script" uid="uid://yfasanscw4vc" path="res://scenes/main_menu.gd" id="1_0ettg"]
[ext_resource type="AudioStream" uid="uid://yemjmkcwpe1a" path="res://assets/sounds/music/Imminent Threat Collection/Imminent Threat.mp3" id="2_ekxnf"]

[sub_resource type="Theme" id="Theme_rhts7"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_0ettg")

[node name="Title" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 200
text = "Siegecraft TD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProfileDisplay" type="VBoxContainer" parent="."]
offset_left = 1650.0
offset_top = 20.0
offset_right = 1900.0
offset_bottom = 100.0

[node name="Background" type="ColorRect" parent="ProfileDisplay"]
layout_mode = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="profileNameLabel" type="Label" parent="ProfileDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Stratoverus"
horizontal_alignment = 1

[node name="changeNameButton" type="Button" parent="ProfileDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Change Profile"

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 350.0
offset_right = 1920.0
offset_bottom = 1080.0
theme = SubResource("Theme_rhts7")

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="newGame" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "NEW GAME"

[node name="loadGame" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "LOAD GAME"

[node name="settings" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "SETTINGS"

[node name="profile" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "PROFILE"

[node name="credits" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "CREDITS"

[node name="quit" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "QUIT"

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="back" type="Button" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="fullscreen" type="CheckBox" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "FULLSCREEN"

[node name="mainVolSlider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="mainVolLabel" type="Label" parent="CenterContainer/SettingsMenu/mainVolSlider"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 400.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "MAIN VOLUME"
horizontal_alignment = 1

[node name="musicVolSlider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="musicVolLabel" type="Label" parent="CenterContainer/SettingsMenu/musicVolSlider"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 400.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "MUSIC VOLUME"
horizontal_alignment = 1

[node name="sfxVolSlider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="sfxVolLabel" type="Label" parent="CenterContainer/SettingsMenu/sfxVolSlider"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 400.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "SFX VOLUME"
horizontal_alignment = 1

[node name="CreditsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="credits" type="Label" parent="CenterContainer/CreditsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Developed by Keith Eberhard
Music by Matthew Pablo"
horizontal_alignment = 1

[node name="back" type="Button" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="LoadMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="title" type="Label" parent="CenterContainer/LoadMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "LOAD GAME"
horizontal_alignment = 1

[node name="loadCheckpoint" type="Button" parent="CenterContainer/LoadMenu"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "CONTINUE (CHECKPOINT)"

[node name="back" type="Button" parent="CenterContainer/LoadMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="ProfileMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="title" type="Label" parent="CenterContainer/ProfileMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "PROFILE"
horizontal_alignment = 1

[node name="profileNameLabel" type="Label" parent="CenterContainer/ProfileMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Profile: Player"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/ProfileMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="viewStatsButton" type="Button" parent="CenterContainer/ProfileMenu/MenuButtons"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "VIEW STATISTICS"

[node name="achievementsButton" type="Button" parent="CenterContainer/ProfileMenu/MenuButtons"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "ACHIEVEMENTS"

[node name="houseSkinsButton" type="Button" parent="CenterContainer/ProfileMenu/MenuButtons"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "HOUSE SKINS"

[node name="back" type="Button" parent="CenterContainer/ProfileMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="StatsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="title" type="Label" parent="CenterContainer/StatsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "STATISTICS"
horizontal_alignment = 1

[node name="StatsContainer" type="GridContainer" parent="CenterContainer/StatsMenu"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="gamesPlayedLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Games Played:"

[node name="gamesPlayedValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="timesWonLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Times Won:"

[node name="timesWonValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="timesLostLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Times Lost:"

[node name="timesLostValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="wavesLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Total Waves Survived:"

[node name="wavesValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="enemiesLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enemies Defeated:"

[node name="enemiesValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="towersLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Towers Built:"

[node name="towersValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="highestWaveLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Highest Wave:"

[node name="highestWaveValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="goldEarnedLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Total Gold Earned:"

[node name="goldEarnedValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="playTimeLabel" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Time:"

[node name="playTimeValue" type="Label" parent="CenterContainer/StatsMenu/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0 minutes"

[node name="back" type="Button" parent="CenterContainer/StatsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="AchievementsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="title" type="Label" parent="CenterContainer/AchievementsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "ACHIEVEMENTS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/AchievementsMenu"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 4

[node name="achievementsList" type="VBoxContainer" parent="CenterContainer/AchievementsMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="back" type="Button" parent="CenterContainer/AchievementsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="HouseSkinsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="title" type="Label" parent="CenterContainer/HouseSkinsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "HOUSE SKINS"
horizontal_alignment = 1

[node name="currentSkinLabel" type="Label" parent="CenterContainer/HouseSkinsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Current House Skin: Classic Cottage"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/HouseSkinsMenu"]
custom_minimum_size = Vector2(800, 300)
layout_mode = 2
size_flags_horizontal = 4

[node name="skinGrid" type="GridContainer" parent="CenterContainer/HouseSkinsMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="back" type="Button" parent="CenterContainer/HouseSkinsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="GameModeMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="normal" type="Button" parent="CenterContainer/GameModeMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "NORMAL"

[node name="extraHard" type="Button" parent="CenterContainer/GameModeMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "EXTRA HARD"

[node name="endless" type="Button" parent="CenterContainer/GameModeMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "ENDLESS"

[node name="back" type="Button" parent="CenterContainer/GameModeMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ekxnf")
volume_db = -10.0
autoplay = true
bus = &"MUSIC"
parameters/looping = false

[connection signal="pressed" from="ProfileDisplay/changeNameButton" to="." method="_on_change_name_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/newGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/loadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/SettingsMenu/back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="CenterContainer/SettingsMenu/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/mainVolSlider" to="." method="_on_main_vol_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/musicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/sfxVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/CreditsMenu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/LoadMenu/loadCheckpoint" to="." method="_on_load_checkpoint_pressed"]
[connection signal="pressed" from="CenterContainer/LoadMenu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/ProfileMenu/MenuButtons/viewStatsButton" to="." method="_on_view_stats_pressed"]
[connection signal="pressed" from="CenterContainer/ProfileMenu/MenuButtons/achievementsButton" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="CenterContainer/ProfileMenu/MenuButtons/houseSkinsButton" to="." method="_on_house_skins_pressed"]
[connection signal="pressed" from="CenterContainer/ProfileMenu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/StatsMenu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/AchievementsMenu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/HouseSkinsMenu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/GameModeMenu/normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="CenterContainer/GameModeMenu/extraHard" to="." method="_on_extra_hard_pressed"]
[connection signal="pressed" from="CenterContainer/GameModeMenu/endless" to="." method="_on_endless_pressed"]
[connection signal="pressed" from="CenterContainer/GameModeMenu/back" to="." method="_on_back_pressed"]
